--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Gratitude_71939
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 71939-h/images/cover.jpg
 creator:
   author:
     agent_name: Norton, Roy
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '34062'
     url: http://www.gutenberg.org/2009/agents/34062
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71939#Gratitude
 gutenberg_issued: '2023-10-23'
 identifiers:
   gutenberg: '71939'
